--- a/bs4/_Swiper.cshtml
+++ b/bs4/_Swiper.cshtml
@@ -19,74 +19,69 @@
   var swiperContainerHeight = isRatio ? "" : "height: " + sliderHeightOrRatio + ";";
 }
 
-@* TODO: 2RO - five! DIVs which are just in each-other. Do we really need app-swiper2/aspect-ratio/inner/swiper-container/swiper-wrapper in separate DIVs? if yes, pls doc, or change *@
-<div class="app-swiper2" @Edit.TagToolbar(swiper, toolbar: new [] { "settings&hover=left&autoAddMore=start" })>
-  <div style="@aspectRatioStyle">
-    <div class="inner">
-      @* Slider main container and wrapper *@
-      <div class="swiper-container swiper-@swiper.EntityId" style="width: @sliderWidth; @swiperContainerHeight">
-        <div class="swiper-wrapper">
+<div class="app-swiper2" @Edit.TagToolbar(swiper, toolbar: new [] { "settings&hover=left&autoAddMore=start" }) style="@aspectRatioStyle">
+    @* Slider main container and wrapper *@
+    <div class="swiper-container swiper-@swiper.EntityId" style="width: @sliderWidth; @swiperContainerHeight">
+      <div class="swiper-wrapper">
 
-          @* if we don't have slides, show a dummy slide and provide buttons to start adding *@
-          @if(swiper.Slides.Count == 0) {
-            @Html.Partial("./_Swiper.PartEmpty.cshtml")
-          }
+        @* if we don't have slides, show a dummy slide and provide buttons to start adding *@
+        @if(swiper.Slides.Count == 0) {
+          @Html.Partial("./_Swiper.PartEmpty.cshtml")
+        }
 
-          @* Slides - Add each one (if there are any) *@
-          @foreach (var slide in swiper.Slides) {
-            // Merge settings of the current slide, the swiper defaults and the App settings/defaults
-            var sldSettings = AsDynamic(slide, swiper, Settings);
-            var overlayEffect = sldSettings.OverlayEffect;    // Positioning
-            var duration = sldSettings.ShowDuration;          // time the slide will show if auto-playing
+        @* Slides - Add each one (if there are any) *@
+        @foreach (var slide in swiper.Slides) {
+          // Merge settings of the current slide, the swiper defaults and the App settings/defaults
+          var sldSettings = AsDynamic(slide, swiper, Settings);
+          var overlayEffect = sldSettings.OverlayEffect;    // Positioning
+          var duration = sldSettings.ShowDuration;          // time the slide will show if auto-playing
 
-            <div class="swiper-slide" data-swiper-autoplay="@duration" @(swiper.IsDemoItem ? "" : Edit.TagToolbar(slide, toolbar: new[] { "%delete&show=true" } ))>
-              <div class="image-wrapper @helpers.WrapperClasses(sldSettings)">
-                @* Add the <picture> tag with all the sources *@
-                @helpers.PictureTag(slide.Image.ToLower(), slide.Title, sliderHeightOrRatio)
+          <div class="swiper-slide" data-swiper-autoplay="@duration" @(swiper.IsDemoItem ? "" : Edit.TagToolbar(slide, toolbar: new[] { "%delete&show=true" } ))>
+            <div class="image-wrapper @helpers.WrapperClasses(sldSettings)">
+              @* Add the <picture> tag with all the sources *@
+              @helpers.PictureTag(slide.Image.ToLower(), slide.Title, sliderHeightOrRatio)
 
-                @if (Text.Has(slide.Title) || Text.Has(slide.Text) || Text.Has(slide.LinkText)) {
-                  @* Show Overlay behind text *@
-                  <div class="overlay overlay-@overlayEffect"></div>
+              @if (Text.Has(slide.Title) || Text.Has(slide.Text) || Text.Has(slide.LinkText)) {
+                @* Show Overlay behind text *@
+                <div class="overlay overlay-@overlayEffect"></div>
 
-                  <div class="d-flex position-relative h-100 @helpers.RowClasses(sldSettings)">
-                    <div class="w-100 py-4 px-3 px-md-5 @helpers.ContentClasses(sldSettings)">
-                      @* Show Title in overlay *@  
-                      @if (Text.Has(slide.Title)) {
-                        <p class="lead" data-swiper-parallax="-250">@slide.Title</p>
-                      }
-                      @* Show Description / additional Text in overlay *@  
-                      @if (Text.Has(slide.Text)) {
-                        <div class="co-slidertext" data-swiper-parallax="-500">@Html.Raw(slide.Text)</div>
-                      }
-                      @* Show Link in overlay *@  
-                      @if (Text.Has(slide.LinkText)) {
-                        <div data-swiper-parallax="-750">
-                          <a class="btn btn-primary" href="@Link.Image(slide.Link)" target='@(slide.LinkBlankTarget == true ? "_blank" : "")'>@slide.LinkText</a>
-                        </div>
-                      }
-                    </div>
+                <div class="d-flex position-relative h-100 @helpers.RowClasses(sldSettings)">
+                  <div class="w-100 py-3 py-md-4 px-3 px-md-5 @helpers.ContentClasses(sldSettings)">
+                    @* Show Title in overlay *@  
+                    @if (Text.Has(slide.Title)) {
+                      <p class="lead" data-swiper-parallax="-250">@slide.Title</p>
+                    }
+                    @* Show Description / additional Text in overlay *@  
+                    @if (Text.Has(slide.Text)) {
+                      <div class="co-slidertext" data-swiper-parallax="-500">@Html.Raw(slide.Text)</div>
+                    }
+                    @* Show Link in overlay *@  
+                    @if (Text.Has(slide.LinkText)) {
+                      <div data-swiper-parallax="-750">
+                        <a class="btn btn-primary" href="@Link.Image(slide.Link)" target='@(slide.LinkBlankTarget == true ? "_blank" : "")'>@slide.LinkText</a>
+                      </div>
+                    }
                   </div>
-                }
+                </div>
+              }
 
-              </div>
             </div>
-          }
-
-        </div>
-
-        @* Pagination *@
-        @if (swiperSettings.ShowPaginationDots) {
-          <div class="swiper-pagination"></div>
+          </div>
         }
 
-        @* Navigation buttons (right left arrows) *@
-        @if (swiperSettings.ShowPaginationArrows) {
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
-        }
       </div>
+
+      @* Pagination *@
+      @if (swiperSettings.ShowPaginationDots) {
+        <div class="swiper-pagination"></div>
+      }
+
+      @* Navigation buttons (right left arrows) *@
+      @if (swiperSettings.ShowPaginationArrows) {
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      }
     </div>
-  </div>
 </div>
 
 @Html.Partial("./_Swiper.PartAssets.cshtml", new { SwiperSettings = swiperSettings })
