--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -32,7 +32,7 @@
   }
 
   &[style*="--aspect-ratio"] {
-    .swiper-container {
+    .swiper {
       position: absolute;
       top: 0;
       left: 0;
@@ -43,7 +43,7 @@
     }
   }
 
-  .swiper-container {
+  .swiper {
     width: 100%;
     height: 50vh;
     .swiper-slide {
