--- a/bs4/_Swiper.cshtml
+++ b/bs4/_Swiper.cshtml
@@ -1,5 +1,4 @@
 @inherits Custom.Hybrid.Razor12
-@using Newtonsoft.Json;
 @using ToSic.Razor.Blade;
 @{
   // Get some helper commands for later on
@@ -58,7 +57,7 @@
                     @* Show Link in overlay *@  
                     @if (Text.Has(slide.LinkText)) {
                       <div data-swiper-parallax="-750">
-                        <a class="btn btn-primary" href="@Link.Image(slide.Link)" target='@(slide.LinkBlankTarget == true ? "_blank" : "")'>@slide.LinkText</a>
+                        <a class="btn btn-primary" href="@Tags.SafeUrl(slide.Link)" target='@(slide.LinkBlankTarget == true ? "_blank" : "")'>@slide.LinkText</a>
                       </div>
                     }
                   </div>
