minor convert helpers

--- a/bs4/_Swiper.PartAssets.cshtml
+++ b/bs4/_Swiper.PartAssets.cshtml
@@ -16,11 +16,7 @@
       fallback = AsDynamic(swiperSettings.EffectFallback)
     }
   };
-
-  // Convert the configuration to JSON to add to turnOn
-  var jsonService = GetService<ToSic.Sxc.Web.IJsonService>();
-  var swiperJson = jsonService.ToJson(swiperData);
 }
-<turnOn turn-on='{"await": ["window.appSwiper2"], "run": "window.appSwiper2.init()", "data": @Html.Raw(swiperJson) }'></turnOn>
+<turnOn turn-on='{"await": ["window.appSwiper2"], "run": "window.appSwiper2.init()", "data": @Html.Raw(Convert.Json.ToJson(swiperData)) }'></turnOn>
 <link rel="stylesheet" href="@App.Path/dist/styles.min.css" data-enableoptimizations="true">
 <script src="@App.Path/dist/scripts.min.js" data-enableoptimizations="false"></script>
