--- a/bs4/_Swiper.PartAssets.cshtml
+++ b/bs4/_Swiper.PartAssets.cshtml
@@ -1,7 +1,15 @@
 @inherits Custom.Hybrid.Razor12
 @using ToSic.Razor.Blade;
 @{
-  var page = GetService<ToSic.Sxc.Web.IPageService>();
+  // 1. Get Services for Css and Page
+  var pageCss = GetService<Connect.Koi.ICss>();         // Service to get CSS information about the current Theme
+  var page = GetService<ToSic.Sxc.Web.IPageService>();  // Service to set titles etc. on the page
+
+  // 2. Include Bootstrap4 if the framework isn't known
+  if (pageCss.IsUnknown) {
+    page.Activate("Bootstrap4");
+  }
+
   page.Activate("turnOn"); // see https://r.2sxc.org/turnon
   
   var swiperSettings = DynamicModel.SwiperSettings;
