--- a/bs4/_Swiper.cshtml
+++ b/bs4/_Swiper.cshtml
@@ -78,8 +78,8 @@
 
       @* Navigation buttons (right left arrows) *@
       @if (swiperSettings.ShowPaginationArrows) {
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev swiper-button-prev-@swiper.EntityId"></div>
+        <div class="swiper-button-next swiper-button-next-@swiper.EntityId"></div>
       }
     </div>
 </div>
