--- a/bs5/_Swiper.PartAssets.cshtml
+++ b/bs5/_Swiper.PartAssets.cshtml
@@ -25,6 +25,6 @@
     }
   };
 }
-<link rel="stylesheet" href="@App.Path/bs5/dist/styles.min.css" data-enableoptimizations="false">
+<link rel="stylesheet" href="@App.Path/bs5/dist/styles.min.css" data-enableoptimizations="true">
 <turnOn turn-on='{ "run": "window.appSwiper2.init()", "data": @Html.Raw(Convert.Json.ToJson(swiperData)) }'></turnOn>
-<script src="@App.Path/bs5/dist/scripts.min.js" data-enableoptimizations="false"></script>
+<script src="@App.Path/bs5/dist/scripts.min.js" data-enableoptimizations="true"></script>
