--- a/bs4/_Swiper.cshtml
+++ b/bs4/_Swiper.cshtml
@@ -41,8 +41,8 @@
           <div class="swiper-slide" data-swiper-autoplay="@duration" @toolbar>
             <div class="image-wrapper @helpers.SlideWrapperClasses(sldSettings)">
               @* Add the <picture> tag with all the sources *@
-              @imgSvc.Picture(slide.Image.ToLower(), imgAlt:slide.Title, factor: sliderHeightOrRatio)
-              @* @helpers.PictureTag(slide.Image.ToLower(), slide.Title, sliderHeightOrRatio) *@
+              @imgSvc.Picture(slide.Image.ToLower(), settings: Settings.Images.Content, imgAlt:slide.Title, factor: sliderHeightOrRatio)
+
 
               @if (Text.Has(slide.Title) || Text.Has(slide.Text) || Text.Has(slide.LinkText)) {
                 @* Show Overlay behind text *@
