--- a/bs4/_Swiper.PartAssets.cshtml
+++ b/bs4/_Swiper.PartAssets.cshtml
@@ -1,17 +1,12 @@
-@inherits Custom.Hybrid.Razor12
+@inherits Custom.Hybrid.Razor14
 @using ToSic.Razor.Blade;
-@using ToSic.Sxc.Services;
 @{
-  // 1. Get Services for Css and Page
-  var pageCss = GetService<Connect.Koi.ICss>();         // Service to get CSS information about the current Theme
-  var pageSvc = GetService<IPageService>();  // Service to set titles etc. on the pageSvc
-
   // 2. Include Bootstrap4 if the framework isn't known
-  if (pageCss.IsUnknown) {
-    pageSvc.Activate("Bootstrap4");
+  if (Kit.Css.IsUnknown) {
+    Kit.Page.Activate("Bootstrap4");
   }
 
-  pageSvc.Activate("turnOn"); // see https://r.2sxc.org/turnon
+  Kit.Page.Activate("turnOn"); // see https://r.2sxc.org/turnon
   
   var swiperSettings = DynamicModel.SwiperSettings;
 
@@ -26,6 +21,6 @@
     }
   };
 }
-<link rel="stylesheet" href="@App.Path/bs4/dist/styles.min.css" @pageSvc.AssetAttributes()>
-<turnOn turn-on='{ "run": "window.appSwiper2.init()", "data": @Html.Raw(Convert.Json.ToJson(swiperData)) }'></turnOn>
-<script src="@App.Path/bs4/dist/scripts.min.js" @pageSvc.AssetAttributes()></script>
+<link rel="stylesheet" href="@App.Path/bs4/dist/styles.min.css" @Kit.Page.AssetAttributes()>
+<turnOn turn-on='{ "run": "window.appSwiper2.init()", "data": @Html.Raw(Kit.Json.ToJson(swiperData)) }'></turnOn>
+<script src="@App.Path/bs4/dist/scripts.min.js" @Kit.Page.AssetAttributes()></script>
