--- a/bs5/Swiper.PartAssets.cshtml
+++ b/bs5/Swiper.PartAssets.cshtml
@@ -1,27 +1,27 @@
-@inherits Custom.Hybrid.Razor14
+@inherits Custom.Hybrid.RazorPro
 @using ToSic.Razor.Blade;
+
 @{
   // 2. Include Bootstrap4 if the framework isn't known
   @Kit.Page.Activate(condition: Kit.Css.IsUnknown, features: "Bootstrap5")
   
-  var swiperSettings = DynamicModel.SwiperSettings;
-
-  var swiperOptions = new {
-    autoplay = swiperSettings.Autoplay,
-    speed = swiperSettings.AnimationDuration,
-    // The following two values are JSON strings, so we must turn them into an object
-    effectDefaults = AsDynamic(swiperSettings.Effect.Configuration),
-    fallback = AsDynamic(swiperSettings.EffectFallback)
-  };
+  var swiper = MyModel.Item("Swiper");
+  var swiperSettings = AsStack(MyModel.Get("SwiperSettings"));
 
   var data = new {
-    moduleId = Content.EntityId,
-    options = swiperOptions
+    moduleId = swiper.Id,
+    options = new {
+      autoplay = swiperSettings.Bool("Autoplay"),
+      speed = swiperSettings.Int("AnimationDuration"),
+      // The following two values are JSON strings, so we must turn them into an object
+      effectDefaults = Kit.Json.ToTyped(swiperSettings.String("Effect.Configuration")),
+      fallback = Kit.Json.ToTyped(App.Settings.String("EffectFallback"))
+    },
   };
 }
 
-<link rel="stylesheet" href="@CmsContext.View.Path/dist/styles.min.css" @Kit.Page.AssetAttributes()/>
-<script src="@CmsContext.View.Path/dist/scripts.min.js" @Kit.Page.AssetAttributes()></script>
+<link rel="stylesheet" href="@MyView.Path/dist/styles.min.css" @Kit.Page.AssetAttributes()/>
+<script src="@MyView.Path/dist/scripts.min.js" @Kit.Page.AssetAttributes()></script>
 
 @* Activation uses turnOn https://r.2sxc.org/turnon *@
 @Kit.Page.TurnOn("window.appSwiper2.init()", data: data)
