Custom.Hybrid...Pro -> Typed

--- a/bs5/Swiper.cshtml
+++ b/bs5/Swiper.cshtml
@@ -1,4 +1,4 @@
-@inherits Custom.Hybrid.RazorPro
+@inherits Custom.Hybrid.RazorTyped
 @using ToSic.Razor.Blade;
 @{
   // The current swiper (can also be a demo item, if nothing has been added yet)
