--- a/bs5/Swiper.PartAssets.cshtml
+++ b/bs5/Swiper.PartAssets.cshtml
@@ -20,8 +20,8 @@
   };
 }
 
-<link rel="stylesheet" href="@MyView.Path/dist/styles.min.css" @Kit.Page.AssetAttributes()/>
-<script src="@MyView.Path/dist/scripts.min.js" @Kit.Page.AssetAttributes()></script>
+<link rel="stylesheet" href="@MyView.Folder.Url/dist/styles.min.css" @Kit.Page.AssetAttributes()/>
+<script src="@MyView.Folder.Url/dist/scripts.min.js" @Kit.Page.AssetAttributes()></script>
 
 @* Activation uses turnOn https://r.2sxc.org/turnon *@
 @Kit.Page.TurnOn("window.appSwiper2.init()", data: data)
